2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (string_in_list): implement locally now that nm_utils_string_in_list
			was removed from libnm-util

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_dialog_response_cb): update for nm_setting_new_from_hash()

2008-11-19  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
	  src/applet-device-wifi.c
		- Fix up compare flag names

2008-11-19  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_changed): handle error returned from
			nm_connection_replace_settings()

2008-11-18  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-tls.c
		- (eap_method_tls_new, revalidate): don't validate here, since the
			validation would only be for the TLS object, which may not be
			what's actually selected in the security combo

	* src/wireless-dialog.c
		- (internal_init, revalidate): instead, validate here from an idle
			handler to match revalidation done in nm-connection-editor.c.
			Fixes a bug introduced by the PKCS#12 support where the secrets
			dialog's OK button wouldn't be initially enabled

2008-11-15  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  src/Makefile.am
	  src/polkit-helpers/Makefile.am
	  src/polkit-helpers/README
	  src/polkit-helpers/polkit-gnome-action.c
	  src/polkit-helpers/polkit-gnome-action.h
	  src/polkit-helpers/polkit-gnome-auth.c
	  src/polkit-helpers/polkit-gnome-auth.h
	  src/polkit-helpers/polkit-gnome-context.c
	  src/polkit-helpers/polkit-gnome-context.h
	  src/polkit-helpers/polkit-gnome.h
		- Partial backport of PolicyKit-gnome 0.8 to PolicyKit 0.6

	* src/connection-editor/Makefile.am
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/nm-connection-list.c
		- Use polkit-helpers

	* src/connection-editor/polkit-06-helpers.c